--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,7 @@
             <li><a href="blog.html">Inicio</a></li>
             <li><a href="artículos.html">Artículos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="linktree.html">Linktree</a></li>
+            <li><a href="index.html">Linktree</a></li>
             </ul>
         </nav>
     </header>
